--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
-  text-align: center;
+/* general */
+* {
+    margin: 0px;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background-color: #202026;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cardShape {
+    background-color:#18181d;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 95vh;
+    width: 30vw;
+    border-radius: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+/* colors */
+p, a, a:visited, h5 {
+    color: gray;
 }
 
-.App-link {
-  color: #61dafb;
+h1, h3 {
+    color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h4 {
+    color: #61dafb;
+}
+
+
+/* sections */
+header {
+    height: 50%;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.about, .interests {
+    height: 20%;
+    width: 100%;
+}
+
+footer {
+    background-color: #100f12;
+    height: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0px 0px 15px 15px;
+}
+
+
+/* positioning */
+h1 {
+    margin-top: 10px;
+}
+
+h5 {
+    margin-bottom: 20px;
+}
+
+h3 {
+    margin-top: 15px;
+    margin-left: 30px;
+}
+
+p {
+    margin: 10px 40px 0px 40px;
+}
+
+
+/* buttons */
+button {
+    font-size: 16px;
+    width: 170px;
+    height: 40px;
+    border-style: none;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.btn-linked {
+    background-color: #008CBA;
+    color: white;
+}
+
+.btn-linked:hover {
+    background-color: white;
+    color: #008CBA;
+    
+}
+
+.btn-mail:hover {
+    background-color: black;
+    color: white;
+    transition: .5s ease;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+a {
+    transition: 1s;
+}
+
+a:hover {
+    color: white;
+}
+
+
+/* communcation lists */
+.comm-footer, .comm-header {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.comm-header {
+    padding: 0px 30px;
+}
+
+.comm-footer {
+    padding: 0px 70px;
+}
+
+
+/* placeholder image */
+img {
+    height: 50%;
 }
